--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
+   "proxy": "https://localhost:8443",
    "homepage": "https://chandanakka.github.io/my-app",
    "scripts": {
     "start": "react-scripts start",
